--- a/index.html
+++ b/index.html
@@ -3165,8 +3165,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/20RVh4dgYt">
+                    <img src="https://down-br.img.susercontent.com/file/889dbe8e7651342d4750f46930769976" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3180,15 +3180,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/20RVh4dgYt">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/20RVh4dgYt">James Corbi Courier Irving East Cheech NBA Warriors basketball/jersey keychain hung on the Lakers souvenir</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$19,90</data>
                   </div>
                 </a>
 
