--- a/index.html
+++ b/index.html
@@ -3199,8 +3199,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/1fofIeIZpn">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-7qvft-lfuzndi1mvg51a" style="width: 360px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3214,15 +3214,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/1fofIeIZpn">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/1fofIeIZpn">Camisa Para Homens 2023NBA Orlando Magic #5 Paolo Banchero Preto Basquetebol Jersey</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$85,00</data>
                   </div>
                 </a>
 
