--- a/index.html
+++ b/index.html
@@ -3233,8 +3233,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/9KE6R382rJ">
+                    <img src="https://down-br.img.susercontent.com/file/eb02ccc1c95f273f33aaa7823d578e35" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3248,15 +3248,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/9KE6R382rJ">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/9KE6R382rJ">Camisa Nba san antonio Esporas no . 21 duncan Esportiva Novo Tecido Branco KVP6</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$88,31</data>
                   </div>
                 </a>
 
