--- a/index.html
+++ b/index.html
@@ -3267,6 +3267,74 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
+                  <a href="https://shope.ee/7f5sS6y1nq">
+                    <img src="https://down-br.img.susercontent.com/file/c399f7abb52a8ff48bcc46a0f6319e4a" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/7f5sS6y1nq">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/7f5sS6y1nq">Camisetas Regatas de BASQUETE NBA GOLDEN STATE WARRIORS 30</a>
+                    </h3>
+                    <data class="card-price" value="">
+                      R$39,99</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="LINK">
+                    <img src="IMG" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="LINK">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="LINK">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">
+                      PREÇO</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
                   <a href="LINK">
                     <img src="IMG" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
@@ -3296,74 +3364,6 @@
 
               </div>
             </li> <br>
-
-            <li class="product-item">
-              <div class="product-card" tabindex="0">
-
-                <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
-                      alt="Running Sneaker Shoes" class="image-contain">
-                  </a>
-
-                  <ul class="card-action-list">
-
-                    <li class="card-action-item">
-                      <button class="card-action-btn" aria-labelledby="card-label-1">
-                        <ion-icon name="cart-outline"></ion-icon>
-                      </button>
-
-                  </ul>
-                </figure>
-
-                <a href="LINK">
-                  <div class="card-content">
-                    <div class="card-cat">
-                    </div>
-                    <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
-                    </h3>
-                    <data class="card-price" value="">
-                      PREÇO</data>
-                  </div>
-                </a>
-
-              </div>
-            </li>
-
-            <li class="product-item">
-              <div class="product-card" tabindex="0">
-
-                <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
-                      alt="Running Sneaker Shoes" class="image-contain">
-                  </a>
-
-                  <ul class="card-action-list">
-
-                    <li class="card-action-item">
-                      <button class="card-action-btn" aria-labelledby="card-label-1">
-                        <ion-icon name="cart-outline"></ion-icon>
-                      </button>
-
-                  </ul>
-                </figure>
-
-                <a href="LINK">
-                  <div class="card-content">
-                    <div class="card-cat">
-                    </div>
-                    <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
-                    </h3>
-                    <data class="card-price" value="">
-                      PREÇO</data>
-                  </div>
-                </a>
-
-              </div>
-            </li>
 
             <li class="product-item">
               <div class="product-card" tabindex="0">
