--- a/index.html
+++ b/index.html
@@ -3301,8 +3301,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/1LBoub1Etm">
+                    <img src="https://down-br.img.susercontent.com/file/73566ea3360af827390687b8d3e167ab" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3316,15 +3316,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/1LBoub1Etm">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/1LBoub1Etm">Kit com 3 Shorts de Basquete Melhores Times da NBA Brooklyn Chicago Bulls New York</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$79,00</data>
                   </div>
                 </a>
 
