--- a/index.html
+++ b/index.html
@@ -3335,8 +3335,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/gRKEmMT5">
+                    <img src="https://down-br.img.susercontent.com/file/br-11134207-7qukw-letbxgzcozkv45" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3350,15 +3350,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/gRKEmMT5">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/gRKEmMT5">kit 12 Pares Meia Preta Meia Branca Meias Masculina Meia Cano Alto Promoção Oferta</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$39,00</data>
                   </div>
                 </a>
 
