--- a/index.html
+++ b/index.html
@@ -3403,8 +3403,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/9KE6Rah6zS">
+                    <img src="https://down-br.img.susercontent.com/file/sg-11134201-22110-q72lmcnq6cjvc6"" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3418,15 +3418,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/9KE6Rah6zS">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/9KE6Rah6zS">Suéter Feminino Novo Outono E Inverno Americano Vintage Largo Estampa Moletom</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$57,00</data>
                   </div>
                 </a>
 
