--- a/index.html
+++ b/index.html
@@ -3437,8 +3437,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/30K2u3KSxy">
+                    <img src="https://down-br.img.susercontent.com/file/br-11134201-22120-loiog36bvxkv43" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3452,15 +3452,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/30K2u3KSxy">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/30K2u3KSxy">Conjunto Dri-fit com símbolo refletivo, vai o kit completo igual a foto.</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$149,00</data>
                   </div>
                 </a>
 
