--- a/index.html
+++ b/index.html
@@ -3471,8 +3471,8 @@
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
-                  <a href="LINK">
-                    <img src="IMG" style="width: 340px;" loading="lazy"
+                  <a href="https://shope.ee/4KpQUgJg4O">
+                    <img src="https://down-br.img.susercontent.com/file/cn-11134207-7qukw-lfbvobnyo5o8e4" style="width: 340px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                   </a>
 
@@ -3486,15 +3486,15 @@
                   </ul>
                 </figure>
 
-                <a href="LINK">
+                <a href="https://shope.ee/4KpQUgJg4O">
                   <div class="card-content">
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="LINK">AQUI</a>
+                      <a href="https://shope.ee/4KpQUgJg4O">2023 Marca Nike Primavera Outono Alta Qualidade Personalidade De Lazer Ao Ar Livre Rua Tinta Com Capuz Splash Sweatshirt + Slim-Fit</a>
                     </h3>
                     <data class="card-price" value="">
-                      PREÇO</data>
+                      R$119,97 - R$129,97</data>
                   </div>
                 </a>
 
